# ai-dev-kit

./: .gitignore  .mcp.json  ANALYSIS.md  CDC_SYNTAX_FIX.md  CLAUDE.md  DATABRICKS_DEPLOYMENT.md  DATABRICKS_DEPLOYMENT_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  REFACTORING.md  install.ps1  install.sh  prompt.md  sdp_builder_function.py  sdp_builder_simple.py  simple_sdp.py  test.py
.claude-plugin/: plugin.json
databricks-ai-functions/: AI_AGENT_INTEGRATION.md  AI_AGENT_TOOL_SERVING_ENDPOINT.md  DEPLOYMENT_SUMMARY.md  Demo_Notebook.py  MODEL_SERVING_SETUP.md  PROMPT_IMPROVEMENTS.md  QUICKREF.md  README.md  SCHEMA_INTROSPECTION_FIX.md  TABLE_REFERENCE_FIX.md  TESTING_COMPLETE.md  TEST_REPORT.md  deploy_agent_framework.py  deploy_correct_code_paths.py  deploy_endpoint_notebook.py  deploy_endpoint_with_wheels.py  deploy_inline_code.py  deploy_volume_wheels.py  pyproject.toml  run_tests.sh  test_basic_pipeline.py  test_build_pipeline_integration.py  test_build_pipeline_live.py  test_build_pipeline_unit.py  test_embedded_skills.py  test_model_locally.py  test_product_scd.py  test_scd_type2.py  test_volume_wheels.py
databricks-ai-functions/databricks_ai_functions/: __init__.py
databricks-ai-functions/databricks_ai_functions/_shared/: llm.py  skills.py
databricks-ai-functions/databricks_ai_functions/sdp/: __init__.py  build_pipeline.py  register_job_based_function.py  register_uc_function.py  register_with_dependencies.py
databricks-ai-functions/tests/: test_sdp_builder.py
databricks-skills/skill-test/: PLAN.md  README.md  SKILL.md  pyproject.toml
(+257 files in other folders)
