[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-test"
version = "0.1.0"
description = "Testing framework for evaluating Databricks skills"
readme = "SKILL.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "mlflow[databricks]>=3.6.1",
]

[project.optional-dependencies]
# Databricks execution (for non-MCP usage) - install with: pip install -e ".[databricks]"
databricks = [
    "databricks-sdk>=0.20.0",
]
# Development/testing - install with: pip install -e ".[dev]"
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
# All dependencies - install with: pip install -e ".[all]"
all = [
    "skill-test[eval,databricks,dev]",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
